<resources>
    <string name="app_name">Login</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_up">Sign up</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main">MainActivity</string>
    <string name="forget_pass">Forget Password?</string>

    <!--facebook-->
    <string name="facebook_app_id">1769828993284406</string>
    <string name="fb_login_protocol_scheme">1769828993284406</string>
</resources>
